tests/baselines/reference/parserErrorRecovery_Block3.errors.txt
==== tests/cases/conformance/parser/ecmascript5/ErrorRecovery/Blocks/parserErrorRecovery_Block3.ts (3 errors) ====
    class C  {
        private a(): boolean {
                     ~~~~~~~
!!! error TS2355: A function whose declared type is neither 'void' nor 'any' must return a value or consist of a single 'throw' statement.
    
        private b(): boolean {
        ~~~~~~~
!!! error TS1129: Statement expected.
                     ~~~~~~~
!!! error TS2355: A function whose declared type is neither 'void' nor 'any' must return a value or consist of a single 'throw' statement.
        }
    }